--- a/src/css1.css
+++ b/src/css1.css
@@ -664,22 +664,27 @@
 
   /* cardddddddddddddddddddddddddddddddddd*/
   .movie {
-    width: 180px;
-    height: 260px;
-    /* margin: 1.5rem; */
+    width: 11rem;
+    height: 24rem;
+    margin: 0.5rem;
     /* max-width: 60%; */
     position: relative;
+    display: flex;
+    float: left;
     border-radius: 12px;
     overflow: hidden;
     border: none;
     /* margin: auto; */
     margin-top: 1rem;
-    transition: all 1s cubic-bezier(0.175, 0.885, 0, 1);
-    box-shadow: 0px 13px 10px -7px rgba(1, 0, 72, 0.548);
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
+    box-shadow: 0px 6px 10px -4px rgb(7, 0, 60);
     /*---------------------------------------*/
     flex: 0 0 auto;
     /* width: 200px; */
     margin-right: 1em;
+    /* font-size: small; */
+    font-size: x-small;
+    /* margin-left: 1rem; */
     /* background-color: #f1f1f1; */
     /* text-align: center; */
     /* padding: 1em; */
