--- a/src/css1.css
+++ b/src/css1.css
@@ -1105,4 +1105,5 @@ input:focus {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 9;
+  background-color: rgba(37, 32, 87, 0.351); /* Semi-transparent black */
 }
