--- a/src/css1.css
+++ b/src/css1.css
@@ -1101,9 +1101,11 @@ input:focus {
 
 .spinner-fm {
   position: absolute;
+  width: 100%;
+  height: 100%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 9;
-  background-color: rgba(37, 32, 87, 0.351); /* Semi-transparent black */
+  background-color: rgba(14, 7, 94, 0.351); /* Semi-transparent black */
 }
