--- a/src/css1.css
+++ b/src/css1.css
@@ -1101,6 +1101,7 @@ input:focus {
 }
 
 .spinner-fm-back {
+  position: fixed;
   width: 100%;
   height: 100%;
   z-index: 9;
@@ -1108,7 +1109,7 @@ input:focus {
 }
 
 .spinner-fm{
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
