--- a/src/css1.css
+++ b/src/css1.css
@@ -1109,7 +1109,7 @@ input:focus {
 }
 
 .spinner-fm{
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
