--- a/src/css1.css
+++ b/src/css1.css
@@ -1100,18 +1100,18 @@ input:focus {
   box-shadow: 0 0 15px 5px rgba(81, 51, 253, 0.741);
 }
 
-/* .spinner-fm-back {
+.spinner-fm-back {
   position:static;
   width: 100%;
   height: 100%;
   z-index: 9;
   background-color: rgba(14, 7, 94, 0.351); 
-} */
+}
 
-.spinner-fm{
+/* .spinner-fm{
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 10;
-}
+} */
