--- a/src/css1.css
+++ b/src/css1.css
@@ -1101,7 +1101,10 @@ input:focus {
 }
 
 .spinner-fm-back {
-  position:static;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
   z-index: 9;
@@ -1112,6 +1115,5 @@ input:focus {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   z-index: 10;
 } */
