--- a/src/css1.css
+++ b/src/css1.css
@@ -76,7 +76,7 @@
 
   .nav a {
     text-decoration: none;
-    color: white;
+    color: rgb(173, 202, 235);
   }
 
   #mainheader {
@@ -86,12 +86,20 @@
     /* width:100%; */
     /* margin:0.3em; */
     /* background: -webkit-linear-gradient(left, #ffffff,#ffffff,#02befb,#605ee353,#133b9000,rgba(0, 0, 255, 0)); */
-    background: -webkit-linear-gradient(left, #02befb, #7775e98b, #3164d199, rgba(0, 0, 255, 0.276));
+    /* background: -webkit-linear-gradient(left, #02befb, #7775e98b, #3164d199, rgba(0, 0, 255, 0.276));
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: transparent; */
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 3vw;
     margin-top: 0;
+    animation: fadeIn 3s ease-in-out infinite;
+    box-shadow: 0px 6px 10px -4px rgb(7, 0, 60);
+    margin: auto;
+  }
+
+  #mainheader a {
+    text-decoration: none;
+    color: rgb(145, 196, 255);
   }
 
   body {
@@ -407,19 +415,24 @@
 
   #mainheader {
     text-align: center;
+    padding-right: 10px;
+    margin-left: 0.3rem;
     /* width:100%; */
-    margin: 10px;
-    /* background: -webkit-linear-gradient(left, #02befb,#02befb,#02befb,#133b90,rgba(0, 0, 255, 0)); */
-    background: -webkit-linear-gradient(left, #02befb, #7775e98b, #3164d199, rgba(0, 0, 255, 0.276));
+    /* margin:0.3em; */
+    /* background: -webkit-linear-gradient(left, #ffffff,#ffffff,#02befb,#605ee353,#133b9000,rgba(0, 0, 255, 0)); */
+    /* background: -webkit-linear-gradient(left, #02befb, #7775e98b, #3164d199, rgba(0, 0, 255, 0.276));
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: transparent; */
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 8vw;
+    font-size: 3vw;
+    margin-top: 0;
+    animation: fadeIn 3s ease-in-out infinite;
+    margin: auto;
   }
-
+  
   #mainheader a {
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: rgb(173, 202, 235);
   }
 
   body {
@@ -570,12 +583,20 @@
   }
 
   @keyframes fadeIn {
-    from {
+    0% {
       opacity: 0;
     }
 
-    to {
+    25% {
       opacity: 1;
+    }
+
+    75% {
+      opacity: 1;
+    }
+
+    100% {
+      opacity: 0;
     }
   }
 
@@ -588,7 +609,7 @@
     margin-bottom: 10px;
     padding: 0;
     float: left;
-    animation: fadeIn 1s ease-in-out;
+    animation: fadeIn 3s ease-in-out infinite;
   }
 
   /* .footer{
@@ -664,9 +685,9 @@
 
   /* cardddddddddddddddddddddddddddddddddd*/
   .movie {
-    width: 9.8rem;
+    width: 9rem;
     height: 24rem;
-    margin: 0.1rem;
+    margin: 0.4rem;
     /* max-width: 60%; */
     position: relative;
     display: flex;
@@ -681,8 +702,7 @@
     /*---------------------------------------*/
     flex: 0 0 auto;
     /* width: 200px; */
-    margin-right: 0.5em;
-    margin-left: 0.5em;
+    margin-right: 1em;
     /* font-size: small; */
     font-size: x-small;
     /* margin-left: 1rem; */
@@ -1072,7 +1092,7 @@ input:focus {
 
 /* ---------------- modal -------------*/
 
-.modal1h {
+.modal1h{
   background-color: rgba(47, 0, 255, 0.764);
   border-radius: 10px;
   /* filter: blur(5px); */
@@ -1080,38 +1100,22 @@ input:focus {
 }
 
 .custom-modal-1 .modal-content {
-  background: linear-gradient(45deg,
+  background: linear-gradient(
+      45deg,
       #0026ff,
-      #2a0056bb);
+      #2a0056bb
+  );
   color: white;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px
+      rgba(0, 0, 0, 0.2);
   transform: rotate(-1deg);
 }
-
 .custom-modal-1 .modal-content:hover {
   transform: scale(1.1) rotate(0deg);
   transition: transform 0.2s;
 }
 
-.banner-ph {
+.banner-ph{
   box-shadow: 0 0 15px 5px rgba(81, 51, 253, 0.741);
 }
-
-.spinner-fm-back {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: 100%;
-  z-index: 9;
-  background-color: rgba(14, 7, 94, 0.351);
-}
-
-/* .spinner-fm{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  z-index: 10;
-} */
