--- a/src/css1.css
+++ b/src/css1.css
@@ -639,20 +639,13 @@
 
   .logo {
     /* transition: opacity 0.5s ease-in-out; */
-    width: 3.5vw;
-    /* padding: 0; */
-    /* margin: 20px; */
-
-    margin-left: 1rem;
-    margin-bottom: 3px;
+    width: 9vw;
     padding: 0;
-    /* padding-right: 1rem; */
+    /* margin: 20px; */
+    margin-left: 10%;
+    margin-bottom: 10px;
+    padding: 0;
     float: left;
-
-    max-width: 100px;
-    /* Adjust the maximum width as needed */
-    height: auto;
-    margin-right: 15px;
     animation: fadeIn 3s ease-in-out infinite;
   }
 
