--- a/src/css1.css
+++ b/src/css1.css
@@ -74,7 +74,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to right, #050c72df, #0f29a6ee);
+    background: linear-gradient(to right, #0b17be50, #1a3add21);
     /* filter:blur(1px); */
     /* border-radius: 1rem; */
     /* border: #07135109 1.5px; */
@@ -126,7 +126,7 @@
   body {
     /* height: 1000px;
         width: 95%; */
-    background-image: linear-gradient(rgba(3, 3, 148, 0.578), rgba(17, 0, 255, 0.158)), url("b1.jpg");
+    background-image: linear-gradient(rgb(3, 3, 148), rgb(32, 26, 124));
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -281,8 +281,9 @@
 
   .containerhz1 {
     /* background-color: #001580; */
-    background-color: rgba(9, 11, 150, 0.405);
-    width: 95%;
+    background-color: rgba(9, 11, 150, 0.801);
+    width: 97%;
+    padding: 2%;
     margin: auto;
     padding-bottom: 2rem;
     padding-top: 1rem;
@@ -312,9 +313,9 @@
 
   /* movieeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee */
   .movie {
-    width: 12rem;
-    height: 24rem;
-    margin: 0.5rem;
+    width: 17rem;
+    height: 22rem;
+    margin-right: 0rem;
     /* max-width: 60%; */
     position: relative;
     display: flex;
@@ -323,7 +324,7 @@
     overflow: hidden;
     border: none;
     /* margin: auto; */
-    margin-top: 1rem;
+    margin-top: 0rem;
     transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
     box-shadow: 0px 6px 10px -4px rgb(7, 0, 60);
     /* width: 310px;
@@ -357,7 +358,7 @@
 
   .movie:hover {
     box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
-    transform: scale(1.15, 1.15);
+    transform: scale(1.02, 1.02);
   }
 
   .movie div:nth-of-type(2) {
@@ -368,7 +369,7 @@
   .movie div:nth-of-type(2) img {
     height: auto;
     width: 100%;
-    margin-top: 20%;
+    margin-top: 2%;
   }
 
   .movie div:nth-of-type(3) {
@@ -462,13 +463,12 @@
     font-size: 3vw;
     margin-top: 0;
     animation: fadeIn 3s ease-in-out infinite;
-    /* box-shadow: 0px 6px 10px -4px rgb(7, 0, 60); */
     margin: auto;
   }
 
   #mainheader a {
     text-decoration: none;
-    color: rgb(145, 196, 255);
+    color: rgb(173, 202, 235);
   }
 
   body {
@@ -639,7 +639,7 @@
 
   .logo {
     /* transition: opacity 0.5s ease-in-out; */
-    width: 9vw;
+    width: 10vw;
     padding: 0;
     /* margin: 20px; */
     margin-left: 10%;
@@ -722,9 +722,9 @@
 
   /* cardddddddddddddddddddddddddddddddddd*/
   .movie {
-    width: 9rem;
-    height: 24rem;
-    margin: 0.4rem;
+    width: 17rem;
+    height: 22rem;
+    margin-right: 0rem;
     /* max-width: 60%; */
     position: relative;
     display: flex;
@@ -736,16 +736,18 @@
     margin-top: 1rem;
     transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
     box-shadow: 0px 6px 10px -4px rgb(7, 0, 60);
-    /*---------------------------------------*/
-    flex: 0 0 auto;
-    /* width: 200px; */
-    margin-right: 1em;
-    /* font-size: small; */
-    font-size: x-small;
-    /* margin-left: 1rem; */
-    /* background-color: #f1f1f1; */
-    /* text-align: center; */
-    /* padding: 1em; */
+    /* width: 310px;
+    height: 460px;
+    margin: 1.5rem;
+    float: left;
+    position: relative;
+    border-radius: 12px;
+    overflow: hidden;
+    border: none;
+  
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
+    box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
+     */
   }
 
   .movie div:nth-of-type(1) {
@@ -770,7 +772,7 @@
   .movie div:nth-of-type(2) img {
     height: auto;
     width: 100%;
-    margin-top: 20%;
+    margin-top: 2%;
   }
 
   .movie div:nth-of-type(3) {
@@ -1169,6 +1171,15 @@ input:focus {
   transition: transform 0.2s;
 }
 
+.banner-ph {
+  /* filter: saturate(1.1); */
+  filter: brightness(0.95) saturate(1.3);
+  width: 80%;
+  display: flex;
+  margin: auto
+}
+
 .banner-ph:hover {
-  box-shadow: 0 0 15px 5px rgba(75, 69, 255, 0.741);
+  filter: brightness(1.1) saturate(1.3);
+  box-shadow: 0 0 15px 5px rgba(75, 69, 255, 0.24);
 }
